# agency-openstudio

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GUIDE.md  LICENSE  LICENSE.MIT  PLAN.md  README.md  ROADMAP.md  pyproject.toml
.agency/commands/: finance.md  frame.md  ops.md  people.md
.agency/memory/: constitution.md
.claude/: settings.json
.claude/hooks/: guard-gate.sh  guard-lib.sh  healthcheck-gate.sh  ultra-gate.sh
.claude/plans/: career-ops-borrowings.md
.github/workflows/: offline-suite.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
agency_cli/: batch_runner.py  runner_bridge.py  scaffolder.py  tui.py
agency_cli/engines/: cli_engine.py
agency_kit/: departments.py  router.py
agency_studio/: __init__.py  assets.py  bundler.py  capabilities.py  cli.py  context_block.py  knowledge.py  mcp_client.py  openmontage_backend.py  personas.py  rag.py  retention.py  seedance.py  server.py  taxonomy.py  visual.py  websearch.py
agency_studio/engines/: __init__.py  embeddings.py  local_media.py  models.py  portable.py
agency_studio/recipes/: __init__.py  checkpoint.py  models.py  om_bridge.py  orchestrator.py  registry.py  stages.py
agencykit/: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
agencykit/.agency/commands/: comms.md  marketing.md  mission.md
agencykit/.agency/scripts/sh/: install-claude.sh
agencykit/.github/workflows/: ci.yml
agencykit/agency_cli/: __init__.py  batch_runner.py  checkpoints.py  cli.py  escalation.py  exporter.py  integrations.py  runner_bridge.py  scaffolder.py  sync_payload.py  verification.py
agencykit/agency_cli/engines/: __init__.py  cli_engine.py
agencykit/agency_cli/payload/agency/commands/: data.md  solve.md  tech.md
agencykit/agency_cli/payload/agency/scripts/sh/: new-mission.sh
agencykit/agency_cli/payload/agency/templates/: deliverable-template.md  dossier-template.md
agencykit/agency_cli/payload/agents/: _shared-data.md  _shared-product.md  _shared-us.md  commander-finance.md  commander-ops.md  commander-tech.md  inspector-agency.md  inspector-finance.md  officer-1-business-case.md  officer-3-commercial.md  officer-4-pipeline.md  officer-5-accounts.md  officer-6-reporting.md  soldier-abm-orchestration.md  soldier-asc606-rev-rec.md  soldier-break-even.md  soldier-budget-actuals.md  soldier-business-case-builder.md  soldier-buying-committee-multithreading.md  soldier-cash-flow.md  soldier-conjoint-analysis.md  soldier-contract-renewal.md  soldier-dcf-valuation.md  soldier-deal-intelligence-coaching.md  soldier-dynamic-pricing.md  soldier-financial-modeling.md  soldier-health-score-designer.md  soldier-icp-commercial.md  soldier-investor-reporting.md  soldier-lead-qualification.md  soldier-monte-carlo-sim.md  soldier-negotiation.md  soldier-packaging-bundling.md  soldier-proposal-writing.md  soldier-qbr-ebr-designer.md  soldier-recurring-revenue-analytics.md  soldier-revenue-model.md  soldier-revops-alignment.md  soldier-sales-methodology.md  soldier-valuation-multiples.md  (+1 more)
agencykit/agency_cli/payload/skills/account-management/: SKILL.md
agencykit/agency_cli/payload/skills/cash-flow/: SKILL.md
agencykit/agency_cli/payload/skills/competitor-pricing/: SKILL.md
agencykit/agency_cli/payload/skills/contract-renewal/: SKILL.md
agencykit/agency_cli/payload/skills/deal-structuring/: SKILL.md
agencykit/agency_cli/payload/skills/icp-commercial/: SKILL.md
agencykit/agency_cli/payload/skills/lead-qualification/: SKILL.md
agencykit/agency_cli/payload/skills/objection-handling/: SKILL.md
agencykit/agency_cli/payload/skills/packaging-bundling/: SKILL.md
agencykit/agency_cli/payload/skills/pipeline-architecture/: SKILL.md
agencykit/agency_cli/payload/skills/pl-monitoring/: SKILL.md
agencykit/agency_cli/payload/skills/pricing-strategy/: SKILL.md
agencykit/agency_cli/payload/skills/revops-alignment/: SKILL.md
agencykit/agency_cli/payload/skills/routing/: SKILL.md
agencykit/agency_cli/payload/skills/routing/agents/: openai.yaml
agencykit/agency_cli/payload/skills/sales-methodology/: SKILL.md
agencykit/agency_cli/payload/skills/unit-economics/: SKILL.md
agencykit/agency_kit/: __init__.py  store.py
agencykit/agents/: _shared-agency.md  _shared-eu.md  _shared-fr.md  _shared-solve.md  commander-agency.md
agencykit/docs/: ARCHITECTURE.md
agencykit/research/: comms-kit-research-2025-2026.md  data-kit-research-2025-2026.md  ops-kit-research-2025-2026.md  people-kit-research-2025-2026.md  tech-kit-research-2025-2026.md
agencykit/skills/mission-dossier/: SKILL.md
agencykit/tests/: __init__.py  conftest.py  test_checkpoints.py  test_cli.py  test_engine.py  test_engine_contract.py  test_escalation.py  test_exporter.py  test_router.py  test_runner_bridge.py  test_store.py  test_verification.py
agents/: _shared-finance.md  _shared-people.md  _shared-tech.md  router-agency.md
app/studio/: README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  LICENSES.md  OPENMONTAGE-FUSION.md  REAL-TEST-REPORT.md  SECURITY.md  WAVE3-PLAN.md  WAVE4-PLAN.md  WAVE5-PLAN.md  WAVE6-PLAN.md
docs/legacy/: REAL-TEST-REPORT.md  brick9-multi-cli-live-test.md
skills/cross-dept-synthesis/: SKILL.md
specs/001-engine-contract/: data-model.md  plan.md  (+4 more)
tests/: test_assets.py  test_assets_render.py  test_bundler.py  test_capabilities.py  test_cli.py  test_context_block.py  test_embeddings_gateway.py  test_knowledge.py  test_local_media.py  test_mcp_client.py  test_openmontage_backend.py  test_personas.py  test_portable.py  test_rag.py  test_recipes.py  test_retention.py  test_seedance.py  test_server.py  test_server_capabilities.py  test_server_media.py  test_server_taxonomy.py  test_server_verification.py  test_structure.py  test_system_endpoint.py  test_taxonomy.py  test_visual.py  test_websearch.py
(+336 files in other folders)
