[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agency-studio"
version = "0.0.0"
description = "Local-first agentic studio: agency-kit orchestration + local multimodal layer (image / voice / RAG) with a web GUI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agentic", "local-llm", "multimodal", "stable-diffusion", "rag", "agency-kit"]

# Core has ZERO runtime dependencies (stdlib http.server, mirrors agency-kit's ethos).
#
# agency-kit is NOT listed here as a PyPI dependency: it is the local orchestration
# brain the studio wraps, installed editable from a sibling checkout
# (`pip install -e /path/to/agency-kit`). The studio imports `agency_cli` /
# `agency_kit` at runtime and fails fast with install guidance if they are absent.
dependencies = []

[project.scripts]
# Wave 0 — launch the local Mission Console web GUI (stdlib HTTP/SSE server).
agency-studio = "agency_studio.cli:main"

[project.optional-dependencies]
# Wave 2 — local multimodal inference on Apple Silicon (Metal). All MLX-native,
# all MIT/Apache (see docs/LICENSES.md). Imported LAZILY inside agency_studio.
# engines.local_media, so the core server still boots and missions still run with
# this extra absent — a multimodal request then returns 501 with install guidance
# (mirrors the [pdf] path). These wheels target Apple Silicon + Python >= 3.10.
media = [
    "mflux",         # MIT — FLUX.1 (schnell) image generation, MLX-native
    "mlx-whisper",   # MIT — Whisper speech-to-text, MLX-native
    "kokoro-onnx",   # MIT — Kokoro-82M text-to-speech (ONNX, no torch/spacy)
    "soundfile",     # BSD — write the synthesized audio to a WAV file
]
# Placeholders — populated when the matching waves are implemented (see ROADMAP.md).
# Wave 4 (RAG): markitdown for document ingestion + an embeddings lib.
studio = [
    # "markitdown",      # Wave 4 — MIT, document → markdown ingestion
    # "<embeddings-lib>", # Wave 4 — small local embedding model
]
# PDF export of a mission deliverable (agency-kit's exporter.export_pdf), exposed
# at GET /api/mission/{id}/pdf. Both imported lazily inside export_pdf, so the
# server runs fine without them — the endpoint returns 501 until installed.
pdf = [
    "weasyprint",        # HTML → PDF renderer (pure Python)
    "markdown",          # deliverable.md → HTML before WeasyPrint
]
dev = [
    "pytest",
]

[tool.setuptools]
# Wave 0 shipped the thin local server package; Wave 2 adds the engines subpackage
# (local multimodal inference). The React GUI lives in app/studio/.
packages = ["agency_studio", "agency_studio.engines"]
