[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agency-studio"
version = "0.0.0"
description = "Local-first agentic studio: agency-kit orchestration + local multimodal layer (image / voice / RAG) with a web GUI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agentic", "local-llm", "multimodal", "stable-diffusion", "rag", "agency-kit"]

# Core has ZERO runtime dependencies (stdlib http.server, mirrors agency-kit's ethos).
#
# agency-kit is NOT listed here as a PyPI dependency: it is the local orchestration
# brain the studio wraps, installed editable from a sibling checkout
# (`pip install -e /path/to/agency-kit`). The studio imports `agency_cli` /
# `agency_kit` at runtime and fails fast with install guidance if they are absent.
dependencies = []

[project.scripts]
# Wave 0 — launch the local Mission Console web GUI (stdlib HTTP/SSE server).
agency-studio = "agency_studio.cli:main"

[project.optional-dependencies]
# Wave 2 — local multimodal inference on Apple Silicon (Metal). All MLX-native,
# all MIT/Apache (see docs/LICENSES.md). Imported LAZILY inside agency_studio.
# engines.local_media, so the core server still boots and missions still run with
# this extra absent — a multimodal request then returns 501 with install guidance
# (mirrors the [pdf] path). These wheels target Apple Silicon + Python >= 3.10.
#
# System dependency: speech-to-text (mlx-whisper) shells out to `ffmpeg` to decode
# audio — install it separately (`brew install ffmpeg`). Image + TTS do not need it.
# The image model is a non-gated pre-quantized FLUX.1-schnell (see engines/models.py
# IMAGE_MODEL_REPO); the official BFL repo is gated, this avoids any HF login.
media = [
    "mflux",         # MIT — FLUX.1 (schnell) image generation, MLX-native
    "mlx-whisper",   # MIT — Whisper speech-to-text, MLX-native
    "kokoro-onnx",   # MIT — Kokoro-82M text-to-speech (ONNX, no torch/spacy)
    "soundfile",     # BSD — write the synthesized audio to a WAV file
]
# Wave 2 (EXPERIMENTAL) — Boogu-Image-0.1 (Apache-2.0 weights; #1 on Qwen-Image-Bench)
# via the community MLX port. Deliberately SEPARATE from [media]: the port is a
# git-installed, unvetted, work-in-progress repo and the heaviest + slowest image option
# (a 10B model + a Qwen3-VL-8B conditioner; minutes/image on a 16 GB Mac). It rides its
# own "boogu" backend in local_media, lazy-imported, so it never weighs on the lean mflux
# path; absent ⇒ a clean 501 pointing here. Validated live on the target Mac (Wave 2.4).
boogu = [
    "boogu-image-mlx @ git+https://github.com/xocialize/boogu-image-mlx",  # MIT — MLX port
    "mlx-vlm",       # MIT — the Qwen3-VL conditioner Boogu uses
    "Pillow",        # HPND — save the generated array to PNG
]
# Wave 4 — RAG / LocalDocs (see docs/WAVE4-PLAN.md). All MIT/Apache, imported LAZILY
# inside agency_studio.rag / engines.embeddings, so the core server still boots and
# missions still run with this extra absent — an /api/docs request or a mission retrieval
# then degrades cleanly (a 501 with install guidance for ingestion; RAG silently skipped
# for a mission). The embedding model runs on MLX/Metal (Apple Silicon), loaded mutually
# exclusive with the [media] models via the shared ModelManager.
studio = [
    "markitdown",              # MIT — document (PDF/docx/pptx/…) → markdown ingestion
    "mlx-embedding-models",    # MIT — MLX-native text embeddings (nomic-embed / bge-m3)
    "sqlite-vec",              # Apache-2.0/MIT — loadable SQLite vector search extension
]
# PDF export of a mission deliverable (agency-kit's exporter.export_pdf), exposed
# at GET /api/mission/{id}/pdf. Both imported lazily inside export_pdf, so the
# server runs fine without them — the endpoint returns 501 until installed.
pdf = [
    "weasyprint",        # HTML → PDF renderer (pure Python)
    "markdown",          # deliverable.md → HTML before WeasyPrint
]
dev = [
    "pytest",
]

[tool.setuptools]
# Wave 0 shipped the thin local server package; Wave 2 adds the engines subpackage
# (local multimodal inference). The React GUI lives in app/studio/.
packages = ["agency_studio", "agency_studio.engines"]
