[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agency-kit"
version = "0.2.0"
description = "agency-kit — meta-orchestrator for the AI Agency (product + marketing + solve + finance + comms + data + ops + people + tech)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
# No runtime dependencies: missions run through a local agent CLI engine
# (Claude Code / Codex / Gemini) via subprocess. The engine binary is installed
# separately and uses its own authenticated session + web search.
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
pdf = ["weasyprint", "Markdown"]
tui = ["textual>=0.47.0"]

[project.scripts]
agency = "agency_cli.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agency_kit*", "agency_cli*"]

[tool.setuptools.package-data]
# Ship the bundled payload so `agency init` works from a wheel.
agency_cli = ["payload/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
